--- a/Neuromatch Academy/PreReq_1.ipynb
+++ b/Neuromatch Academy/PreReq_1.ipynb
@@ -237,7 +237,7 @@
     "plt.figure()\n",
     "plt.title('$V_m$ with sinusoidal I(t)')\n",
     "plt.xlabel('time (s)')\n",
-    "plt.ylabel('$V_m$ (V)');\n",
+    "plt.ylabel('$V_m$ (V)')\n",
     "\n",
     "# Loop for step_end steps\n",
     "for step in range(step_end):\n",
